# agent-flow

./: .gitignore  AGENTS.md  Cargo.toml  README.md
config/: gateway.toml
config/workflows/: code-runner-example.toml  default.toml  test-wasm.toml  wasm-match-example.toml
crates/application/: Cargo.toml
crates/application/src/: config_admin.rs  error.rs  gateway_config.rs  gateway_validation.rs  header_policy.rs  lib.rs  rule_graph_validation.rs  rule_node_validation.rs  settings_schema.rs  workflow_admin.rs  workflow_runtime.rs
crates/domain/src/: error.rs  gateway.rs  ids.rs  lib.rs  model.rs  policy.rs  port.rs  provider.rs  workflow.rs
crates/domain/src/policy/: expression.rs  (+3 more)
crates/domain/tests/: domain_core.rs  header_policy.rs
crates/facade/: Cargo.toml
crates/facade/src/: admin_api.rs  bootstrap.rs  error.rs  gateway.rs  gateway_execution.rs  lib.rs  main.rs  rules.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: admin_api.rs  config.rs  frontend.rs  gateway.rs  lib.rs  main.rs  rules.rs  wasm_plugins.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: atomic_store.rs  config_acl.rs  config_store.rs  crypto.rs  gateway_config.rs  lib.rs  plugin_registry.rs  plugin_runtime_contract.rs  upstream_http.rs
crates/infrastructure/src/config_acl/: error.rs  mapping.rs  mod.rs  parser.rs  raw_model.rs  route_acl.rs  util.rs  workflow_acl.rs
crates/infrastructure/src/config_acl/graph_acl/: graph_structure.rs  mod.rs  node_acl.rs  wasm_plugin_acl.rs
crates/infrastructure/src/gateway_config/: io.rs  legacy.rs  tests.rs  tests_rest.inc  validate.rs
crates/infrastructure/src/gateway_config/model/: defaults.rs  gateway.rs  graph.rs  mod.rs  routing.rs  runtime.rs  workflow.rs
crates/infrastructure/src/gateway_config/validate/: graph.rs  ids.rs  mapping.rs
crates/infrastructure/src/plugin_registry/: cache.rs  loader.rs  manifest.rs  mod.rs  paths.rs  registry.rs  tests.rs
crates/infrastructure/src/plugin_registry/manifest/: mod.rs  model.rs  parser.rs
crates/infrastructure/src/plugin_runtime_contract/: builder.rs  code_runner.rs  model.rs
crates/infrastructure/tests/: config_acl.rs
docs/plans/: 2026-04-03-llm-gateway-admin-panel.md  2026-04-03-visual-rule-graph-implementation.md
docs/superpowers/plans/: 2026-04-03-canvas-first-admin-panel.md  2026-04-07-inline-wasm-node-config.md
docs/superpowers/specs/: 2026-04-03-canvas-first-admin-design.md  2026-04-03-llm-gateway-design.md  2026-04-03-visual-rule-graph-design.md  2026-04-06-multi-workflow-gallery-design.md  2026-04-06-wasm-plugin-nodes-design.md  2026-04-07-inline-wasm-node-config-design.md
plugins/: README.md
plugins/condition-evaluator/: Cargo.toml  plugin.toml
plugins/condition-evaluator/src/: lib.rs
plugins/intent-classifier/: Cargo.toml  plugin.toml
plugins/intent-classifier/src/: lib.rs
plugins/js-code-runner/: Cargo.toml  plugin.toml
plugins/js-code-runner/src/: lib.rs
plugins/log-step/: Cargo.toml  plugin.toml
plugins/log-step/src/: bindings.rs  lib.rs
plugins/match-evaluator/: Cargo.toml  plugin.toml
plugins/match-evaluator/src/: lib.rs
plugins/minimal-smoke/: plugin.toml
plugins/minimal-smoke/src/: lib.rs
plugins/remote-policy-router/: Cargo.toml  plugin.toml
plugins/remote-policy-router/examples/: local-policy.json
plugins/remote-policy-router/src/: lib.rs
plugins/rewrite-path/: Cargo.toml  plugin.toml
plugins/rewrite-path/src/: lib.rs
plugins/rewrite-path/wit/: world.wit
plugins/route-provider/: Cargo.toml  plugin.toml
plugins/route-provider/src/: lib.rs
plugins/select-model/: Cargo.toml  plugin.toml
plugins/select-model/src/: lib.rs
plugins/set-header/: Cargo.toml  plugin.toml
plugins/set-header/src/: lib.rs
plugins/wasm-match-demo/: Cargo.toml  plugin.toml
plugins/wasm-match-demo/src/: lib.rs
plugins/workflow-selection/: Cargo.toml  plugin.toml
plugins/workflow-selection/src/: lib.rs
plugins/workflow-transform/: Cargo.toml  plugin.toml
plugins/workflow-transform/src/: lib.rs
src/: admin_api.rs  config.rs  crypto.rs  frontend.rs  gateway.rs  lib.rs  main.rs  rules.rs  wasm_plugins.rs
tests/fixtures/minimal-smoke/: Cargo.toml  plugin.toml  plugin.wasm
web/: components.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
web/src/components/: rule-graph-editor.tsx
web/src/lib/: api.ts  types.ts
wit/: proxy-node-plugin.wit
(+44 files in other folders)
