[package]
name = "proxy-tools"
version = "0.1.0"
edition = "2021"
default-run = "proxy-tools"

[workspace]
members = [
    "crates/application",
    "crates/domain",
    "crates/facade",
    "crates/infrastructure",
]
resolver = "2"

[workspace.dependencies]
aes-gcm = "0.10"
axum = "0.8"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive"] }
hkdf = "0.12"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
wasmtime = { version = "40.0.4", default-features = false, features = ["cache", "component-model", "cranelift", "runtime", "std"] }
wasmtime-wasi = { version = "40.0.4", default-features = false, features = ["p1"] }

[dependencies]
aes-gcm.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
clap.workspace = true
hkdf.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
