[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
aes-gcm.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
hkdf.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
wasmtime.workspace = true
