[package]
name = "remote-policy-router"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen-rt = "0.41.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "proxy-tools:remote-policy-router"

[package.metadata.component.target]
path = "wit"
world = "proxy-node-plugin"

[workspace]
